# sserialize

./: .README.swp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README  future.txt
Static/: Array.cpp  Completer.h  Deque.cpp  DynamicKeyValueObjectStore.cpp  FileBasedCompleter.h  FlatGSTStrIds.h  FlatGeneralizedTrie.cpp  FlatGeneralizedTrie.h  GeneralizedSuffixArray.cpp  GeneralizedSuffixArray.h  GeneralizedTrie.cpp  GeneralizedTrie.h  GeoHierarchy.cpp  GeoHierarchySubSetCreator.cpp  GeoMultiPolygon.cpp  GeoPoint.cpp  GeoPoint.h  GeoPolygon.cpp  GeoPolygon.h  GeoShape.cpp  GeoStringsItemDB.h  GeoStringsItemDBPrivate.h  GeoWay.cpp  HierarchyCompleter.cpp  HuffmanDecoder.cpp  ItemGeoGrid.h  ItemIndexStore.cpp  ItemIndexStore.h  KeyValueObjectStore.cpp  Pair.h  RGeoGrid.h  RTree.cpp  RoutableGraph.h  Set.cpp  StringCompleter.cpp  StringCompleter.h  StringTable.cpp  StringsItemDBPrivate.h  Triangulation.cpp  TriangulationGeoHierarchyArrangement.cpp  (+5 more)
Static/TrieNodePrivates/: CompactTrieNodePrivate.cpp  CompactTrieNodePrivate.h  LargeCompactTrieNodePrivate.cpp  SimpleTrieNodePrivate.cpp  SimpleTrieNodePrivate.h
Static/UnicodeTrie/: FlatTrie.cpp
benchmarks/: CMakeLists.txt  coding.cpp  dynamic_bitset_benchmark.cpp  dynamic_bitset_file_bench.cpp  itemindex-for.cpp  itemindex.cpp  oom_sort.cpp  treevector-stdset-merge-comparisson.cpp  uint_dee_encode_bench.cpp
cmake/: AddTargetProperties.cmake  FindCryptopp.cmake  set_highest_cpp.cmake
completers/: GeoCompleter.cpp  GeoCompleter.h  GeoCompleterPrivate.h  GeoStringCompleter.cpp  GeoStringCompleter.h  StringCompleter.cpp  StringCompleter.h  StringCompleterPrivate.cpp  StringCompleterPrivateGeoHierarchyUnclustered.cpp  StringCompleterPrivateItemDB.h  StringCompleterPrivateMulti.cpp  StringCompleterPrivateStaticDB.h
containers/: CellQueryResult.cpp  CellQueryResultPrivate.cpp  DataSetFactory.cpp  DynamicBitSet.cpp  DynamicBitSet.h  FlatGST.cpp  GeneralizeTrieStats.h  GeneralizedTrie.h  GeneralizedTrieHelpers.h  ItemIndex.cpp  ItemIndex.h  ItemIndexFactory.cpp  ItemIndexFactory.h  ItemIndexIterator.cpp  ItemIndexIteratorIntersecting.cpp  ItemIndexIteratorSetOp.cpp  ItemIndexIteratorSetOp.h  ItemSetIterator.h  KeyValueObjectStore.cpp  MultiBitBackInserter.cpp  MultiBitIterator.cpp  MultiVarBitArray.cpp  OpTree.cpp  SetOpTree.cpp  SetOpTree.h  SetOpTreePrivate.h  SetOpTreePrivateComplex.cpp  SetOpTreePrivateSimple.cpp  SetOpTreePrivateSimple.h  SetOpTreePrivateSimple_parser.rl  SetOpTreePrivate_parser.cpp  SetOpTreeQueryParser.rl  SortedOffsetIndex.cpp  SortedOffsetIndex.h  SortedOffsetIndexPrivate.cpp  TreedCQR.cpp  TreedCQRImp.cpp  UDWIterator.cpp  UDWIteratorPrivateHD.cpp
containers/GeneralizedTrie/: FlatTrie.cpp  MultiPassTrie.cpp  SinglePassTrie.cpp
containers/ItemIndexPrivates/: ItemIndexPrivate.cpp  ItemIndexPrivate.h  ItemIndexPrivateDE.cpp  ItemIndexPrivateNative.cpp  ItemIndexPrivateRegLine.cpp  ItemIndexPrivateRleDE.cpp  ItemIndexPrivateSimple.cpp  ItemIndexPrivateSimple.h  ItemIndexPrivateStlDeque.cpp  (+6 more)
spatial/: DistanceCalculator.cpp  GeoGrid.cpp  GeoGrid.h  GeoHierarchy.cpp  GeoMultiPolygon.cpp  GeoPoint.cpp  GeoPolygon.cpp  GeoPolygon.h  GeoRect.cpp  GeoRectSetOpTreeFilter.h  GeoRoutableGraph.h  GeoShape.cpp  GeoWay.cpp  GeoWay.h  GridRTree.cpp  GridRegionTree.cpp  LatLonCalculations.cpp  RTree.cpp  RWGeoGrid.h  RoutableGraph.h  RoutableGraphInterface.h
staging/: DataSetStore.h  new_compact_trie_node.diff
statistics/: bwindex.txt  index_ec_is.py
support/play/: CMakeLists.txt  flatgst_prototype.cpp
templated/: DirectLFUCache.h  DirectLRUCache.h  GenericTrie.h  GeoStringsItemDB.h  ItemDB.h  LFUCache.h  QuadTree.h  StringsItemDB.h
tests/: AsciiCharEscaper.cpp  CMakeLists.txt  DynamicKeyValueObjectStoreTest.cpp  GeoCompleterTest.h  GeoStringCompleterTest.h  KeyValueObjectStoreTest.cpp  StaticUnicodeTrie.cpp  StaticUnicodeTrieTest.cpp  StringCompleterTest.h  TestBase.cpp  TestBase.h  TestItemData.cpp  TestItemData.h  UnicodeTrie.cpp  UnicodeTrieTest.cpp  algorithm_oom_sort.cpp  containers_CFLArray.cpp  containers_DataSetFactory.cpp  containers_DynamicBitSet.cpp  containers_HashBasedFlatTrie.cpp  containers_IFLArray.cpp  containers_ItemIndex.cpp  containers_ItemIndexBaseTest.h  containers_ItemIndexDE.cpp  containers_ItemIndexFactory_Store.cpp  containers_ItemIndexIterator.cpp  containers_ItemIndexNative.cpp  containers_ItemIndexRleDE.cpp  containers_ItemIndexSimple.cpp  containers_ItemIndexWAH.cpp  containers_OOMArray.cpp  containers_OOMFlatTrie.cpp  containers_SortedOffsetIndex.cpp  containers_VariantStore.cpp  containers_geostringsitemdb.cpp  containers_gst.cpp  containers_itemindex.cpp  containers_itemindex_file.cpp  containers_multibititerators.cpp  containers_multivarbitarray.cpp  (+72 more)
tests/Static/: GeoStringsItemDB.h  GeoStringsItemDBItem.h  GeoStringsItemDBPrivate.h  StringsItemDB.h  StringsItemDBItem.h  StringsItemDBPrivate.h
tests/containers/: GeoStringsItem.h  GeoStringsItemDB.h  ItemDB.h  StringCompleterPrivateItemDB.h  StringCompleterPrivateStaticDB.h  StringCompleterPrivateStaticGSAStrIds.h  StringsItemDB.h  StringsItemDBItem.h  StringsItemDBPrivate.h  StringsItemDBWrapper.h  StringsItemDBWrapperPrivateSIDB.h  StringsItemDBWrapperPrivateSSIDB.h
tests/testdata/: lorem-ipsum.txt  polygons.dxf
tools/: CMakeLists.txt  compressedFileCreator.cpp  inspect_ItemIndexStore.cpp  mmappedmem.cpp
utility/: AtStlInputIterator.h  ChunkedMmappedFile.cpp  ChunkedMmappedFile.h  CompactUintArray.cpp  CompressedMmappedFile.cpp  Compressor.cpp  DiacriticRemover.cpp  DiacriticRemover.h  FileHandler.cpp  LinearRegressionFunctions.cpp  LinearRegressionFunctions.h  MmappedMemory.cpp  MultiReaderSingleWriterLock.cpp  ProgreessInfo.cpp  ProgressInfo.h  RLEStream.cpp  ThreadPool.cpp  TimeMeasuerer.h  TimeMeasurer.cpp  UByteArrayAdapter.cpp  UByteArrayAdapter.h  filewriter.h  hashspecializations.h  histogram2d.cpp  histogram2d.h  log.cpp  log.h  mmappedfile.cpp  mmappedfile.h  pack_unpack_functions.cpp  refcounting.h  statfuncs.h  stringfunctions.cpp  stringfunctions.h  unicode_case_functions.cpp  utilfuncs.cpp
(+574 files in other folders)
